fixed layout issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,8 @@
 }
 
 html, body{
-  /* height: 100%; */
-  min-height: 100%;
+  height: 100%;
+  /* min-height: 100%; */
 }
 
 body {
@@ -35,12 +35,13 @@ body {
 .saved-list {
   background-color: #fff;
   border: 0;
-  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(165, 241, 216, 0.911),
-    0 2px 4px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(165, 241, 216, 0.911), 0 2px 4px rgba(0, 0, 0, 0.24);
   padding: 1rem;
   cursor: pointer;
   position: relative;
-  margin: 1rem auto;
+  /* margin: 1rem auto; */
+  top: 9px;
+  left: 12.5%;
   width: 75%;
   display: flex;
   align-items: center;
